spacing issues.

--- a/static/main.less
+++ b/static/main.less
@@ -206,8 +206,8 @@ div.page.landing {
             font-size: 18px;
           }
           div.tagline {
-            font-weight: 300;
-            font-size: 210%;
+            font-weight: bold;
+            font-size: 190%;
             color: #333;
             @media @xs {
               font-size: 30px;
@@ -233,8 +233,8 @@ div.page.landing {
           }
 
           div.about {
-            margin: 30px 0;
-            font-size: 80%;
+            margin: 0 0 20px;
+            font-size: 75%;
             .button-info {
               color: darkred;
               border-left: 3px solid darkred;
